[metadata]
name = hello_python_ros
version = 0.0.1
authors = [{name = "Olivier Lamarre"},]
description = ROS wrapper example for pure Python project using conda
long_description = file : README.md
long_description_content_type = text/markdown
readme = "README.md"
license = { file="LICENSE" }

[project.urls]
"Homepage" = "https://github.com/olamarre/hello_python_ros.git"

[options]
package_dir =
    = src
